Integrate Github OAuth flow
Integrate Github OAuth flow

--- a/client/src/components/ProjectBoard.scss
+++ b/client/src/components/ProjectBoard.scss
@@ -1,4 +1,8 @@
-.root {
+.dashboard__root {
+  text-align: center;
+}
+
+.tasks__container {
   display: flex;
   justify-content: center;
   height: 100%;
